feat: finished admin's user role config
