# friends-net-server/friends-net-auth/src/main/java/cz/markovda/friendsnet/auth/dos/IUserDO.java
@@ -1,17 +1,0 @@
-package cz.markovda.friendsnet.auth.dos;
-
-public interface IUserDO {
-
-    Integer getId();
-
-    String getLogin();
-
-    String getPassword();
-
-    String getName();
-
-    enum EnumUserRole {
-        ADMIN,
-        USER
-    }
-}
