# friends-net-server/friends-net-auth/src/main/java/cz/markovda/friendsnet/auth/repository/IUserRepository.java
@@ -1,11 +1,13 @@
 package cz.markovda.friendsnet.auth.repository;
 
 import cz.markovda.friendsnet.auth.dos.impl.UserDO;
+import cz.markovda.friendsnet.auth.dos.projection.IUserWithRolesSearchResultDO;
 import org.springframework.data.jpa.repository.JpaRepository;
 import org.springframework.data.jpa.repository.Query;
 import org.springframework.data.repository.query.Param;
 
 import java.util.Collection;
+import java.util.List;
 import java.util.Optional;
 import java.util.Set;
 
@@ -29,4 +31,7 @@ public interface IUserRepository extends JpaRepository<UserDO, Integer> {
 
     @Query("SELECT au.name FROM auth_user au WHERE au.login = :login")
     Optional<String> findNameByLogin(@Param("login") String login);
+
+    @Query("SELECT DISTINCT au FROM auth_user au JOIN FETCH au.roles WHERE au.login IN :usernames")
+    List<UserDO> findByLoginInFetchRoles(@Param("usernames") List<String> usernames);
 }
